update minify js

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <meta charset="utf-8">
-
+<link rel="stylesheet" href="npmbuild.1.0.0.css">
 <h1>Made with love</h1>
 <h2>Built with NPM</h2>
 <p>Made a change</p>
+<script src="npmbuild.1.0.0.js"></script>
